# verifyforgood

./: .dockerignore  .gitignore  .gitlab-ci.yml  AGENTS.md  CUSTOMER_README copy.md  CUSTOMER_README.md  CharityStatusAPI.py  CodexParams.jsonc  Form990Links.txt  PLAN.md  README.md  TODO.md  alembic_nonprofit.ini  docker-compose.yml  legacy_namespace.py  split-plan.json
backend/: .env.local.example  README.md  pyproject.toml
backend/api/: Dockerfile  README.md
backend/api/src/charity_status_backend/api/: __init__.py  app.py  compat.py  entrypoint.py  runtime.py
backend/api/src/verification_backend/api/: __init__.py  app.py  entrypoint.py  runtime.py  transport.py
backend/customer-api/: Dockerfile  README.md
backend/ingest-task/: Dockerfile  README.md
backend/ingest-task/src/charity_status_backend/ingest_task/: __init__.py  cli.py  entrypoint.py  eo_bmf_ecs_runtime.py  eo_bmf_ingest.py  eo_bmf_runner.py  (+2 more)
backend/ingest-task/src/ingest_task/: __init__.py  cli.py
backend/ingest/federal/: Dockerfile  README.md
backend/platform-api/: Dockerfile  README.md
backend/shared/: README.md
backend/tests/: README.md
backend/worker/: Dockerfile  README.md
private-platform/: README.md  pyproject.toml
private-platform/src/charity_status_platform/: README.md  __init__.py
private-platform/src/charity_status_platform/admin_operations/: README.md  __init__.py
private-platform/src/charity_status_platform/billing_usage/: README.md  __init__.py
private-platform/src/charity_status_platform/customer_accounts/: README.md  __init__.py  api_key_service.py  audit_logging.py  audit_repository.py  dynamodb_identity.py  feature_flag_service.py  identity_models.py  identity_repositories.py  membership_service.py  organization_activity_service.py  organization_context_service.py  organization_service.py  organization_settings_service.py  organization_support_service.py  sqlalchemy_audit.py  sqlalchemy_identity.py  sqlalchemy_models.py  subscription_service.py  usage_service.py
private-platform/src/charity_status_platform/identity_access/: README.md  __init__.py  auth_service.py
private-platform/src/charity_status_platform/nonprofits/: __init__.py  ingest_persistence.py  query_client.py  schema.py  sqlalchemy_db.py  sqlalchemy_models.py  sqlalchemy_repository.py
private-platform/src/charity_status_platform/notifications/: README.md  __init__.py
private-platform/src/charity_status_platform/runtime/: README.md  __init__.py  api_compat.py  backend_contracts.py  customer_accounts_backfill.py  customer_accounts_migration.py  entrypoints.py  migration_validation.py  nonprofit_db_cutover.py  nonprofit_migration.py  persistence.py
private-platform/src/verification_platform/: README.md  __init__.py
private-platform/src/verification_platform/admin_operations/: README.md  __init__.py
private-platform/src/verification_platform/billing_usage/: README.md
private-platform/src/verification_platform/customer_accounts/: README.md  __init__.py  audit_logging.py  billing_calendar.py  feature_flag_service.py  organization_support_service.py  sqlalchemy_support_tickets.py  support_tickets.py
private-platform/src/verification_platform/identity_access/: README.md  __init__.py  auth_service.py
private-platform/src/verification_platform/nonprofits/: __init__.py  advisory_service.py  query_client.py  schema.py  sqlalchemy_models.py  sqlalchemy_repository.py
private-platform/src/verification_platform/notifications/: README.md
private-platform/src/verification_platform/runtime/: README.md  __init__.py  api_compat.py  backend_contracts.py  customer_accounts_migration.py  entrypoints.py  nonprofit_migration.py  persistence.py
private-platform/tests/: README.md
public-core/: README.md  pyproject.toml
public-core/src/charity_status/: README.md  __init__.py
public-core/src/charity_status/evidence/: __init__.py
public-core/src/charity_status/normalization/: __init__.py  irs_codes.py
public-core/src/charity_status/policy/: __init__.py
public-core/src/charity_status/sources/: __init__.py  models.py
public-core/src/verification/: README.md  __init__.py
public-core/src/verification/evidence/: __init__.py
public-core/src/verification/normalization/: ein.py
public-core/src/verification/policy/: __init__.py
public-core/src/verification/sources/: __init__.py  catalog.py
public-core/tests/: README.md
(+1208 files in other folders)
