[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "charity-status-backend"
version = "0.1.0"
description = "Executable backend runtime workspace scaffolding for Charity Status API."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []
license = { text = "TBD" }
authors = [{ name = "Charity Status Contributors" }]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "License :: Other/Proprietary License",
  "Operating System :: OS Independent",
]

[tool.setuptools]
packages = [
  "charity_status_backend.api",
  "charity_status_backend.worker",
  "charity_status_backend.ingest_task",
  "charity_status_backend.shared",
]

[tool.setuptools.package-dir]
"charity_status_backend.api" = "api/src/charity_status_backend/api"
"charity_status_backend.worker" = "worker/src/charity_status_backend/worker"
"charity_status_backend.ingest_task" = "ingest-task/src/charity_status_backend/ingest_task"
"charity_status_backend.shared" = "shared/src/charity_status_backend/shared"
