[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "charity-status-backend"
version = "0.1.0"
description = "Executable backend runtime workspace scaffolding for Charity Status API."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []
license = { text = "TBD" }
authors = [{ name = "Charity Status Contributors" }]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "License :: Other/Proprietary License",
  "Operating System :: OS Independent",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = [
  "customer-api/src",
  "platform-api/src",
  "worker/src",
  "shared/src",
  "ingest/federal/src",
  "ingest/state/src",
  "ingest/shared/src",
]
include = ["verification*"]
namespaces = true
