[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "charity-status-private-platform"
version = "0.1.0"
description = "Private platform service and runtime package scaffolding."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []
license = { text = "TBD" }
authors = [{ name = "Charity Status Contributors" }]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "License :: Other/Proprietary License",
  "Operating System :: OS Independent",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["charity_status_platform*"]

